[gd_scene load_steps=10 format=1]

[ext_resource path="res://banlon_time_management.gd" type="Script" id=1]
[ext_resource path="res://road.png" type="Texture" id=2]
[ext_resource path="res://pixel.png" type="Texture" id=3]
[ext_resource path="res://pixels_font.fnt" type="BitmapFont" id=4]
[ext_resource path="res://car_move.gd" type="Script" id=5]
[ext_resource path="res://ship.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, 114.878, 13.1073, 0, 0, 0, 0, -68.3969, 14.7142 )
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="banlon_time_management" type="Node2D"]

transform/pos = Vector2( 512.427, 305.957 )
transform/scale = Vector2( 16.0521, 9.53588 )
script/script = ExtResource( 1 )

[node name="road" type="Sprite" parent="."]

transform/pos = Vector2( -0.0378055, 13.9477 )
transform/scale = Vector2( 0.107414, 0.0815477 )
texture = ExtResource( 2 )

[node name="road1" type="Sprite" parent="."]

transform/pos = Vector2( 0.0560946, -1.14441 )
transform/scale = Vector2( 0.107414, 0.0815477 )
texture = ExtResource( 2 )

[node name="road2" type="Sprite" parent="."]

transform/pos = Vector2( 0.183837, -15.9818 )
transform/scale = Vector2( 0.107414, 0.0815477 )
texture = ExtResource( 2 )

[node name="frog" type="RigidBody2D" parent="."]

transform/pos = Vector2( 27.4582, 27.5923 )
transform/scale = Vector2( 0.0587697, 0.0943734 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 3.2461, 0, 0, 3.13172, -0.510986, -0.297302 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 100
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="frog"]

transform/pos = Vector2( -0.510986, -0.297302 )
transform/scale = Vector2( 3.2461, 3.13172 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="frog 2" type="Sprite" parent="frog"]

transform/pos = Vector2( -1.16406, 3.58954 )
transform/scale = Vector2( 1.40021, 1.28935 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="jump_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false

[node name="note_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="notification" type="RichTextLabel" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -28.0
margin/top = 25.0
margin/right = 209.0
margin/bottom = 78.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "You made it!"
visible_characters = -1

[node name="Path2D" type="Path2D" parent="."]

curve = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="car_path_follow" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 114.878, 13.1073 )
transform/rot = -179.201
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
script/script = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="Path2D/car_path_follow" groups=[
"car",
]]

transform/pos = Vector2( 50.449, -0.46712 )
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D/car_path_follow/StaticBody2D"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/car_path_follow/StaticBody2D"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D1" type="StaticBody2D" parent="Path2D/car_path_follow" groups=[
"car",
]]

transform/pos = Vector2( 81.3252, 0.530422 )
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D/car_path_follow/StaticBody2D1"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/car_path_follow/StaticBody2D1"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D2" type="StaticBody2D" parent="Path2D/car_path_follow" groups=[
"car",
]]

transform/pos = Vector2( 154.142, 0.898155 )
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D/car_path_follow/StaticBody2D2"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/car_path_follow/StaticBody2D2"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Path2D1" type="Path2D" parent="."]

transform/pos = Vector2( 1.92957, -29.2332 )
curve = SubResource( 1 )

[node name="car_path_follow1" type="PathFollow2D" parent="Path2D1"]

transform/pos = Vector2( 114.878, 13.1073 )
transform/rot = -179.505
transform/scale = Vector2( 1, 1 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
script/script = ExtResource( 5 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Path2D1/car_path_follow1" groups=[
"car",
]]

transform/pos = Vector2( 165.515, 0.390413 )
transform/rot = 0.30479
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D1/car_path_follow1/StaticBody2D3"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D1/car_path_follow1/StaticBody2D3"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D4" type="StaticBody2D" parent="Path2D1/car_path_follow1" groups=[
"car",
]]

transform/pos = Vector2( 85.2568, 0.0691471 )
transform/rot = 0.30479
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D1/car_path_follow1/StaticBody2D4"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D1/car_path_follow1/StaticBody2D4"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D6" type="StaticBody2D" parent="Path2D1/car_path_follow1" groups=[
"car",
]]

transform/pos = Vector2( 48.7708, 0.21492 )
transform/rot = 0.30479
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D1/car_path_follow1/StaticBody2D6"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D1/car_path_follow1/StaticBody2D6"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D5" type="StaticBody2D" parent="Path2D1/car_path_follow1" groups=[
"car",
]]

transform/pos = Vector2( 23.485, 0.165485 )
transform/rot = 0.30479
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D1/car_path_follow1/StaticBody2D5"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D1/car_path_follow1/StaticBody2D5"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Path2D2" type="Path2D" parent="."]

transform/pos = Vector2( 4.97898, -13.2518 )
curve = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="car_path_follow1" type="PathFollow2D" parent="Path2D2"]

transform/pos = Vector2( 114.878, 13.1073 )
transform/rot = -179.505
transform/scale = Vector2( 1, 1 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
script/script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D6" type="StaticBody2D" parent="Path2D2/car_path_follow1" groups=[
"car",
]]

transform/pos = Vector2( 40.1899, 0.129478 )
transform/rot = 0.30479
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D2/car_path_follow1/StaticBody2D6"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/car_path_follow1/StaticBody2D6"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D8" type="StaticBody2D" parent="Path2D2/car_path_follow1" groups=[
"car",
]]

transform/pos = Vector2( 155.829, 0.409504 )
transform/rot = 0.30479
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D2/car_path_follow1/StaticBody2D8"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/car_path_follow1/StaticBody2D8"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D7" type="StaticBody2D" parent="Path2D2/car_path_follow1" groups=[
"car",
]]

transform/pos = Vector2( 182.074, 0.276917 )
transform/rot = 0.30479
transform/scale = Vector2( 0.161721, 0.117178 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D2/car_path_follow1/StaticBody2D7"]

transform/pos = Vector2( -4.09009, 1.14368 )
transform/rot = -90.0
transform/scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/car_path_follow1/StaticBody2D7"]

transform/pos = Vector2( -0.251343, 0.646301 )
transform/rot = 5.37896e-07
transform/scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="note_timer" to="." method="_on_note_timer_timeout"]


